# h4lat

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
examples/: operator_algebra.ipynb  operator_catalogue.ipynb  operators_mixing_free.ipynb  quickstart.ipynb
src/h4lat/: __init__.py  cg_calculator.py  kinematic_data.py  moments_operator.py  utilities.py
src/h4lat/data/cg_database/(4, 1)(4, 1)/: 0_0.npy  14_0.npy  16_0.npy
src/h4lat/data/cg_database/(4, 1)(4, 1)(4, 1)/: 10_0.npy  10_1.npy  10_2.npy  11_0.npy  13_0.npy  18_0.npy  18_1.npy  18_2.npy  19_0.npy  19_1.npy
src/h4lat/data/cg_database/(4, 1)(4, 1)(4, 1)_raw/: 10_0.npy  10_1.npy  10_2.npy  10_3.npy  11_0.npy  13_0.npy  18_0.npy  18_1.npy  18_2.npy  19_0.npy  19_1.npy
src/h4lat/data/cg_database/(4, 1)(4, 1)_raw/: 14_0.npy  16_0.npy  6_0.npy
src/h4lat/data/cg_database/(4, 4)(4, 1)/: 14_0.npy  9_0.npy
src/h4lat/data/cg_database/(4, 4)(4, 1)(4, 1)/: 13_0.npy  13_3.npy  18_0.npy  18_1.npy  19_0.npy  19_1.npy  19_2.npy
src/h4lat/data/cg_database/(4, 4)(4, 1)(4, 1)_raw/: 10_0.npy  12_0.npy  13_0.npy  13_1.npy  13_2.npy  13_3.npy  18_0.npy  18_1.npy  19_0.npy  19_1.npy  19_2.npy
src/h4lat/data/cg_database/(4, 4)(4, 1)_raw/: 14_0.npy  17_0.npy  3_0.npy
src/h4lat/data/cg_database/(6, 1)(4, 1)(4, 1)/: 0_0.npy  14_0.npy  14_1.npy  14_2.npy  14_3.npy  15_0.npy  15_1.npy  16_0.npy  16_1.npy  16_2.npy  17_0.npy  17_1.npy  3_0.npy  4_0.npy  5_0.npy  6_0.npy  6_1.npy  7_0.npy  8_0.npy  9_0.npy  9_1.npy
src/h4lat/data/cg_database/(6, 1)(4, 1)(4, 1)_raw/: 0_0.npy  14_0.npy  14_1.npy  14_2.npy  14_3.npy  15_0.npy  15_1.npy  16_0.npy  16_1.npy  16_2.npy  17_0.npy  (+11 more)
src/h4lat/data/operator_database/: operator_100_3_V_8_1_3_4.npy  operator_103_3_V_8_1_3_7.npy  operator_105_3_V_8_2_1_1.npy  operator_106_3_V_8_2_1_2.npy  operator_107_3_V_8_2_1_3.npy  operator_108_3_V_8_2_1_4.npy  operator_109_3_V_8_2_1_5.npy  operator_10_2_V_6_1_1_6.npy  operator_110_3_V_8_2_1_6.npy  operator_111_3_V_8_2_1_7.npy  operator_112_3_V_8_2_1_8.npy  operator_113_3_V_8_2_2_1.npy  operator_116_3_V_8_2_2_4.npy  operator_117_3_V_8_2_2_5.npy  operator_118_3_V_8_2_2_6.npy  operator_119_3_V_8_2_2_7.npy  operator_11_2_V_6_3_1_1.npy  operator_120_3_V_8_2_2_8.npy  operator_121_3_A_4_1_1_1.npy  operator_122_3_A_4_1_1_2.npy  operator_123_3_A_4_1_1_3.npy  operator_125_3_A_4_3_1_1.npy  operator_129_3_A_4_4_1_1.npy  operator_130_3_A_4_4_1_2.npy  operator_131_3_A_4_4_1_3.npy  operator_132_3_A_4_4_1_4.npy  operator_133_3_A_4_4_2_1.npy  operator_134_3_A_4_4_2_2.npy  operator_137_3_A_4_4_3_1.npy  operator_138_3_A_4_4_3_2.npy  operator_139_3_A_4_4_3_3.npy  operator_140_3_A_4_4_3_4.npy  operator_141_3_A_4_4_4_1.npy  operator_143_3_A_4_4_4_3.npy  operator_145_3_A_8_1_1_1.npy  operator_146_3_A_8_1_1_2.npy  operator_147_3_A_8_1_1_3.npy  operator_148_3_A_8_1_1_4.npy  operator_149_3_A_8_1_1_5.npy  operator_150_3_A_8_1_1_6.npy  (+176 more)
tests/: test_basic.py
(+2746 files in other folders)
